- Updated Source code files header information for Licence inclusion. - Fixed Department listing within template variable usage. {nb}

--- a/app/design/frontend/default/default/template/client/submit-ticket.phtml
+++ b/app/design/frontend/default/default/template/client/submit-ticket.phtml
@@ -10,7 +10,7 @@
 				<ul class="form-list">
 					<?php
 					$i = 0;
-					foreach ($this->departments as $department) {
+					foreach ($this->_departments as $department) {
 						$i++;
 						?>
 						<li class="control">
